--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 Some worst quality patches and codes for internet access.
 According to this worst and shameful English written.
-Only until The GitHub kicks me to out or otherwise.
+Only until The GitHub kick me to out of host or otherwise.
 </p>
     
 
